<?xml version="1.0"?>
<package>
  <name>vrep_catkin</name>
  <version>0.0.1</version>
  <description>vrep_catkin metapackage contains packages to vrep into ROS.</description>

  <maintainer email="costashatz@gmail.com">Konstantinos Chatzilygeroudis</maintainer>


  <license>BSD</license>

  <author email="costashatz@gmail.com">Konstantinos Chatzilygeroudis</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>common_msgs</run_depend>
  <run_depend>image_common</run_depend>
  <run_depend>vision_opencv</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
