<?xml version="1.0"?>
<package>
  <name>vrep_joy</name>
  <version>0.0.1</version>
  <description>
    vrep_joy package
  </description>
  
  <maintainer email="costashatz@gmail.com">Konstantinos Chatzilygeroudis</maintainer>

  <license>BSD</license>

  <author email="costashatz@gmail.com">Konstantinos Chatzilygeroudis</author>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>joy</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>joy</run_depend>

</package>
